# EASync

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_TOOLS_REQUIRED.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  ExecutionGuard.mqh  LICENSE_MANAGEMENT_GUIDE.md  README.md  RUST_INSTALLATION.md  SECURITY.md  USER_ONBOARDING.md  install_rust_to_d.ps1  license_management.py  schema.sql  schema_license_extensions.sql  signal.proto  toxic_flow.py
backend/: .env.example  README.md  check_table.py  create_tables.py  debug_masters.py  init_masters_db.py  list_masters.py  requirements.txt  run_security_migration.py  seed_perf_history.py  test_email.py  verify_tables.py  verify_trade_api.py
backend/app/: auth.py  config.py  database.py  main.py  schemas.py
backend/app/api/: analytics.py  auth.py  masters.py  protection.py  security.py  signals.py  subscriptions.py  wallets.py
backend/app/ea_source/: ExecutionGuard.mqh  ProtobufSerializer.mqh  SignalReceiverEA.ex5  SignalSenderEA.ex5
backend/app/services/: email_service.py  otp_service.py
backend/migrations/: 002_security_features.sql  009_subscription_licenses.sql
cloudflare-workers/api-gateway/: package.json  pnpm-lock.yaml  wrangler.jsonc
cloudflare-workers/api-gateway/src/: index.js
dashboard/: .env.development  .env.example  .env.production  package.json  pnpm-lock.yaml  wrangler.toml
dashboard/public/: _headers  _redirects
dashboard/src/: App.jsx  index.css
dashboard/src/config/: api.js
ingest-server/: Cargo.toml  Dockerfile  TESTING.md  build.rs  config.toml  test_client.py
ingest-server/src/: main.rs
(+22 files in other folders)
